--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "uv-study-pkg20"
+name = "py-uv-study-pkg20-250726"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -8,7 +8,7 @@ requires-python = ">=3.12"
 dependencies = []
 
 [project.scripts]
-uv-study-pkg20 = "uv_study_pkg20:main"
+py-uv-study-pkg20-250726 = "py_uv_study_pkg20_250726:main"
 
 [build-system]
 requires = ["uv_build>=0.8.2,<0.9.0"]
