--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "py_uv_study_pkg20_250726"
+name = "pkg20"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -8,7 +8,7 @@ requires-python = ">=3.12"
 dependencies = []
 
 [project.scripts]
-py_uv_study_pkg20_250726 = "py_uv_study_pkg20_250726:main"
+pkg20 = "pkg20:main"
 
 [build-system]
 requires = ["uv_build>=0.8.2,<0.9.0"]
