--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 authors = [{ name = "lwmacct", email = "lwmacct@icloud.com" }]
 requires-python = ">=3.12"
-dependencies = [
-    "importlib-metadata>=8.7.0",
-    "setuptools-scm>=8.3.1",
-]
+dependencies = []
 
 [project.scripts]
 pkg20 = "pkg20:main"
